# few_shot_gaze

./: cscope.file  cscope.in.out
demo/: .frame_processor.py.swp  .landmarks.py.swp  Pipfile  calib_cam0.pkl  camera.py  demo_calib.avi  demo_calib_target.pkl  landmarks.py  pyproject.toml  requirements.txt  run_demo.py
demo/setup-requires/SCons-4.2.0.dist-info/: RECORD
demo/setup-requires/editables-0.2.dist-info/: RECORD
demo/setup-requires/enscons-0.27.0.dist-info/: RECORD
demo/setup-requires/wheel-0.36.2.dist-info/: RECORD
