[tool.poetry]
name = "faze"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.5.4"
torch = "1.4.0"
torchvision = "0.3.0"
opencv-python = "3.4.0.12"
numpy = "1.17.3"
h5py = "2.10.0"
pandas = "0.24.2"
apex = "^0.9.10-alpha.0"
imageio = "^2.9.0"
tqdm = "^4.62.0"
moviepy = "^1.0.3"
yacs = "^0.1.8"
scipy = "1.0.0"
hdf5storage = "^0.1.18"
pgi = "^0.0.11"
vext = "^0.7.6"
"vext.gi" = "^0.7.4"
gobject = "^0.1.0"
PyGObject = "3.28.0"
eos-py = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
